<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/pando_developedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pando_contact"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/pando_developedBy" />

    <ImageView
        android:id="@+id/pandoLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/basic_pandoApps"
        android:src="@drawable/pando" />

    <TextView
        android:id="@+id/pando_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pandoLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/pando_contact" />

</RelativeLayout>